--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Document</title>
 </head>
 <body>
-    <a href="index.ejs">opn</a>
+    <a href="views/user/index.ejs">opn</a>
 
 </body>
 </html>
