--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <button style="background-color: #72a339; color: white ; font-weight: 600; display: inline-flex"
               class="btn p-3 px-5"><span class="material-symbols-outlined">
                 shopping_cart
-              </span>&nbsp;&nbsp;SHOP NOW</button>
+              </span>&nbsp;&nbsp;SHOP OW</button>
           </a>
         </div>
       </div>
