--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             <button style="background-color: #72a339; color: white ; font-weight: 600; display: inline-flex"
               class="btn p-3 px-5"><span class="material-symbols-outlined">
                 shopping_cart
-              </span>&nbsp;&nbsp;SHOP OW</button>
+              </span>&nbsp;&nbsp;SHOP NOW</button>
           </a>
         </div>
       </div>
@@ -256,14 +256,14 @@
         <div class="col-lg-12  text-center">
           <h2>Best Selling Products</h2>
           <br>
-          <img src="/user/leaf.png" alt="">
+          <img src="public/user/leaf.png" alt="">
         </div>
       </div>
 
       <div class="row p-3">
         <div class="col-lg-3 col-md-6 col-sm-6 col-6" style="display: flex; justify-content: center;">
           <div class="card " style="width: 13rem; border: none; ">
-            <a href="productPage"><img class="card-img-top" src="/user/s2p1.jpg" alt="Card image cap"></a>
+            <a href="productPage"><img class="card-img-top" src="public/user/s2p1.jpg" alt="Card image cap"></a>
             <div class="card-body text-center">
               <p class="card-title" style="color: gray; font-size: .8rem;">Groceries</p>
               <h6 class="card-text">Assorted Coffee</h6>
@@ -290,7 +290,7 @@
         </div>
         <div class="col-lg-3 col-md-6 col-sm-6 col-6" style="display: flex; justify-content: center;">
           <div class="card" style="width: 13rem; border: none;">
-            <img class="card-img-top" src="/user/s2p2.jpg" alt="Card image cap">
+            <img class="card-img-top" src="public/user/s2p2.jpg" alt="Card image cap">
 
             <div class="card-body text-center">
               <p class="card-title" style="color: gray; font-size: .8rem;">Groceries</p>
@@ -321,7 +321,7 @@
         </div>
         <div class="col-lg-3 col-md-6 col-sm-6 col-6" style="display: flex; justify-content: center;">
           <div class="card" style="width: 13rem; border: none;">
-            <img class="card-img-top" src="/user/s2p3.jpg" alt="Card image cap">
+            <img class="card-img-top" src="public/user/s2p3.jpg" alt="Card image cap">
 
             <div class="card-body text-center">
               <p class="card-title" style="color: gray; font-size: .8rem;">Groceries</p>
@@ -349,7 +349,7 @@
         </div>
         <div class="col-lg-3 col-md-6 col-sm-6 col-6" style="display: flex; justify-content: center;">
           <div class="card " style="width: 13rem; border: none;">
-            <img class="card-img-top" src="/user/s2p4.jpg" alt="Card image cap">
+            <img class="card-img-top" src="public/user/s2p4.jpg" alt="Card image cap">
 
             <div class="card-body text-center">
               <p class="card-title" style="color: gray; font-size: .8rem;">Groceries</p>
@@ -380,7 +380,7 @@
       </div>
       <div class="row mt-5">
         <div class="col-lg-12 text-center">
-          <img width="13%" style="margin-bottom: -4vh;" src="/user/leaf2.png" alt="">
+          <img width="13%" style="margin-bottom: -4vh;" src="public/user/leaf2.png" alt="">
         </div>
       </div>
 
@@ -444,7 +444,7 @@
                 <div class="card-body">
                   <h2 class="card-title">Organic Legume</h2>
                   <p class="card-text">Ut sollicitudin quam vel purus tempus, vel eleifend felis varius.</p><br>
-                  <a href="everything"><button class="btn px-4"
+                  <a href="everything.html"><button class="btn px-4"
                       style="color: white; font-weight: 600; background-color: #72a339; display: inline-flex;">SHOP
                       NOW&nbsp;<span class="material-symbols-outlined">
                         arrow_right_alt
@@ -452,7 +452,7 @@
                 </div>
               </div>
               <!-- <div class="col-md-2">
-              <img src="/user/payar.jpg" width="10%" class="img-fluid rounded-start" alt="...">
+              <img src="public/user/payar.jpg" width="10%" class="img-fluid rounded-start" alt="...">
               
             </div> -->
             </div>
