--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                   </svg></span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/admin/admin-dashboard.html"><span class="material-symbols-outlined">
+              <a class="nav-link" href="admin/admin-dashboard.html"><span class="material-symbols-outlined">
                   person
                 </span></a>
             </li>
